fixing breaks on buttons and preventing deletes

--- a/study-partner/src/index.css
+++ b/study-partner/src/index.css
@@ -141,9 +141,6 @@ header {
   left: 425px;
 }
 
-.menu {
-
-}
 /* forms */
 
 .form {
